[project]
name = "TicTacToe"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy",email = "evgeniy.migun@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
